examples/datalog/15_arithmetic/27_complex_expression.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_complex_expr
Knowledge graph 'test_complex_expr' created.
Switched to knowledge graph: test_complex_expr
> .kg use test_complex_expr
Switched to knowledge graph: test_complex_expr
> +data[(10, 5, 2)].
Inserted 1 fact(s) into 'data'.
> result(A, B, C, R) :- data(A, B, C), R = (A + B) * C - A / C.
Script error: Parse error: Invalid arithmetic expression: 'C - A'
